--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -1,3 +1,3 @@
-<header class="header">
-    Some text...
-</header>
+<div class="pa-30">
+    <app-first-scroll-view></app-first-scroll-view>
+</div>
