--- a/src/app/natours/first-scroll-view/first-scroll-view.component.html
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.html
@@ -1,3 +1,12 @@
 <header class="header">
-    Some text...
+    <div class="logo-box">
+        <img src="assets/logo-white.png" alt="logo" class="logo">
+    </div>
+
+    <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">Outdoors</span>
+            <span class="heading-primary-sub">is where life happens</span>
+        </h1>
+    </div>
 </header>
