--- a/src/app/natours/first-scroll-view/first-scroll-view.component.scss
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.scss
@@ -28,10 +28,12 @@
     left: 50%;
     top: 40%;
     transform: translate(-50%, -50%);
+    text-align: center;
 
     .heading-primary {
       color: white;
       text-transform: uppercase;
+      margin-bottom: 60px;
 
       .heading-primary-main {
         display: block;
@@ -51,6 +53,61 @@
         animation: moveInRight 1s ease-out;
       }
     }
+  }
+
+  .btn {
+    transition: transform 200ms;
+    backface-visibility: hidden;
+    position: relative;
+    animation: moveToUp 0.5s ease-in-out 0.75;
+    animation-fill-mode: backwards;
+  }
+
+  .btn:link,
+  .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+  }
+
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transition: transform 200ms;
+
+    &:after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
+
+  .btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .btn-white {
+    background-color: white;
+    color: #777;
+  }
+
+  .btn::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+
+  .btn-white::after {
+    background-color: #fff;
   }
 }
 
@@ -83,5 +140,17 @@
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes moveToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
