--- a/src/app/natours/first-scroll-view/first-scroll-view.component.scss
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.scss
@@ -1,12 +1,12 @@
-@use 'src/styles/1_colors' as *;
+@use 'src/styles/1_colors' as colors;
 
 .header {
   position: relative;
   height: 90vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba($green-light, 0.8),
-      rgba($green-dark, 0.8)
+      rgba(colors.$color-green-light, 0.8),
+      rgba(colors.$color-green-dark, 0.8)
     ),
     url(/assets/hero.jpg);
   background-size: cover;
@@ -31,11 +31,11 @@
     text-align: center;
 
     .heading-primary {
-      color: white;
+      color: colors.$color-white;
       text-transform: uppercase;
       margin-bottom: 6rem;
 
-      .heading-primary-main {
+      &-main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
@@ -44,7 +44,7 @@
         animation: moveInLeft 1s ease-out;
       }
 
-      .heading-primary-sub {
+      &-sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
@@ -62,53 +62,53 @@
     animation: moveToUp 0.5s ease-in-out 0.75;
     animation-fill-mode: backwards;
     font-size: 1.6rem;
-  }
 
-  .btn:link,
-  .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-  }
-
-  .btn:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-    transition: transform 200ms;
-
-    &:after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
+    &:link,
+    &:visited {
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 1.5rem 4rem;
+      display: inline-block;
+      border-radius: 10rem;
     }
-  }
 
-  .btn:active {
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  }
+    &:hover {
+      transform: translateY(-0.3rem);
+      box-shadow: 0 1rem 2rem rgba(colors.$color-black, 0.2);
+      transition: transform 200ms;
 
-  .btn-white {
-    background-color: white;
-    color: #777;
-  }
+      &:after {
+        transform: scaleX(1.4) scaleY(1.6);
+        opacity: 0;
+      }
+    }
 
-  .btn::after {
-    content: "";
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
+    &:active {
+      transform: translateY(-0.1rem);
+      box-shadow: 0 0.5rem 1rem rgba(colors.$color-black, 0.2);
+    }
 
-  .btn-white::after {
-    background-color: #fff;
+    &-white {
+      background-color: colors.$color-white;
+      color: colors.$color-grey-dark;
+
+      &::after {
+        background-color: colors.$color-white;
+      }
+    }
+
+    &::after {
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      border-radius: 10rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      transition: all 0.4s;
+    }
   }
 }
 
