--- a/src/styles/1_colors.scss
+++ b/src/styles/1_colors.scss
@@ -1,3 +1,7 @@
-$green-light: #7ed56f;
-$green-medium: #55c57a;
-$green-dark: #28b485;
+$color-green-light: #7ed56f;
+$color-green-medium: #55c57a;
+$color-green-dark: #28b485;
+
+$color-grey-dark: #777;
+$color-white: #fff;
+$color-black: #000;
