--- a/src/app/natours/first-scroll-view/first-scroll-view.component.scss
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.scss
@@ -1,4 +1,4 @@
-@use 'src/styles/1_colors' as colors;
+@use 'src/styles/abstracts/variables' as colors;
 
 .header {
   position: relative;
@@ -109,49 +109,5 @@
       z-index: -1;
       transition: all 0.4s;
     }
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveToUp {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
