--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
-  box-sizing: border-box;
-}
+@use "styles/base";
