--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $color-green-light: #7ed56f;
 $color-green-medium: #55c57a;
 $color-green-dark: #28b485;
@@ -5,3 +6,8 @@ $color-green-dark: #28b485;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
