added utility classes and minor fixes

--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -1,3 +1,4 @@
 <div class="pa-30 overflow-hide">
     <app-first-scroll-view></app-first-scroll-view>
+    <app-second-scroll-view></app-second-scroll-view>
 </div>
