updated second scroll section

--- a/src/app/natours/second-scroll-view/second-scroll-view.component.html
+++ b/src/app/natours/second-scroll-view/second-scroll-view.component.html
@@ -1,16 +1,37 @@
 <main>
     <section class="section-about">
-        <div class="center-text mb-8">
+        <div class="center-text mb-large">
             <h2 class="heading-secondary">
-                Exciting tours for adventorous people
+                Exciting tours for adventurous people
             </h2>
         </div>
         <div class="row">
             <div class="col-1-of-2">
-                text content
+                <h3 class="heading-tertiary mb-small">
+                    You're going to fall in love with the nature
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, alias! Optio a quo similique
+                    veritatis? Deserunt, dicta dolorem? Maiores similique asperiores quae! Culpa a tenetur aspernatur
+                    fuga ea illo quo.
+                </p>
+
+                <h3 class="heading-tertiary mb-small">
+                    Live adventures like never before
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, alias! Optio a quo similique
+                    veritatis? Deserunt, dicta dolorem?
+                </p>
+
+                <a href="#" class="btn-text">Learn more &rarr;</a>
             </div>
-            <div class="col-1-of-2">
-                image composition
+            <div class="col-1-of-2 pos-rel">
+                <div class="composition">
+                    <img src="assets/nat-1-large.jpg" class="pos-abs photo photo-1" alt="photo1">
+                    <img src="assets/nat-2-large.jpg" class="pos-abs photo photo-2" alt="photo2">
+                    <img src="assets/nat-3-large.jpg" class="pos-abs photo photo-3" alt="photo3">
+                </div>
             </div>
         </div>
     </section>
