--- a/src/app/natours/second-scroll-view/second-scroll-view.component.scss
+++ b/src/app/natours/second-scroll-view/second-scroll-view.component.scss
@@ -1,7 +1,7 @@
-@use 'src/styles/abstracts/variables' as colors;
+@use 'src/styles/abstracts/variables' as var;
 
 .section-about {
-  background-color: colors.$color-grey-light;
+  background-color: var.$color-grey-light;
   padding: 25rem 0;
   margin-top: -20vh;
 }
@@ -13,8 +13,8 @@
   display: inline-block;
   background-image: linear-gradient(
     to right,
-    colors.$color-green-light,
-    colors.$color-green-dark
+    var.$color-green-light,
+    var.$color-green-dark
   );
   background-clip: text;
   color: transparent;
@@ -22,6 +22,81 @@
   transition: all 0.2s;
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba(colors.$color-black, 0.2);
+    text-shadow: 0.5rem 1rem 2rem rgba(var.$color-black, 0.2);
+  }
+}
+
+.heading-tertiary {
+  font-size: var.$default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: var.$default-font-size;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: var.$default-font-size;
+    color: var.$color-green-medium;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid var.$color-green-medium;
+    padding: 3px 8px;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: var.$color-green-medium;
+    color: var.$color-white;
+    box-shadow: 0 1rem 2rem rgba(var.$color-black, 0.15);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba(var.$color-black, 0.15);
+    transform: translateY(0);
+  }
+}
+
+.composition {
+  .photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(var.$color-black, 0.4);
+    border-radius: 2px;
+    transition: all 0.2s;
+
+    &-1 {
+      left: 0;
+      top: -2rem;
+    }
+
+    &-2 {
+      right: 0;
+      top: 2rem;
+    }
+
+    &-3 {
+      left: 20%;
+      top: 10rem;
+    }
+
+    &:hover {
+      transform: scale(1.05) translateY(-5px);
+      box-shadow: 0 2.5rem 4rem rgba(var.$color-black, 0.5);
+      z-index: 1;
+      outline: var.$color-green-medium outset 1rem;
+      outline-offset: 1rem;
+    }
+  }
+
+  &:hover .photo:not(:hover) {
+    transform: scale(0.95);
   }
 }
