--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
-.mb-8 {
+.mb-small {
+  margin-bottom: 1.5rem;
+}
+
+.mb-medium {
+  margin-bottom: 4rem;
+}
+
+.mb-large {
   margin-bottom: 8rem;
+}
+
+.pos-rel {
+  position: relative;
+}
+
+.pos-abs {
+  position: absolute;
 }
