added feature section

--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -1,4 +1,5 @@
 <div class="pa-30 overflow-hide">
     <app-first-scroll-view></app-first-scroll-view>
     <app-second-scroll-view></app-second-scroll-view>
+    <app-third-scroll-view></app-third-scroll-view>
 </div>
