--- a/src/app/natours/second-scroll-view/second-scroll-view.component.html
+++ b/src/app/natours/second-scroll-view/second-scroll-view.component.html
@@ -1,13 +1,13 @@
 <main>
     <section class="section-about">
-        <div class="center-text mb-large">
+        <div class="center-text mb-l">
             <h2 class="heading-secondary">
                 Exciting tours for adventurous people
             </h2>
         </div>
         <div class="row">
             <div class="col-1-of-2">
-                <h3 class="heading-tertiary mb-small">
+                <h3 class="heading-tertiary mb-s">
                     You're going to fall in love with the nature
                 </h3>
                 <p class="paragraph">
@@ -16,7 +16,7 @@
                     fuga ea illo quo.
                 </p>
 
-                <h3 class="heading-tertiary mb-small">
+                <h3 class="heading-tertiary mb-s">
                     Live adventures like never before
                 </h3>
                 <p class="paragraph">
