--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -2,15 +2,15 @@
   text-align: center;
 }
 
-.mb-small {
+.mb-s {
   margin-bottom: 1.5rem;
 }
 
-.mb-medium {
+.mb-m {
   margin-bottom: 4rem;
 }
 
-.mb-large {
+.mb-l {
   margin-bottom: 8rem;
 }
 
