--- a/src/app/natours/second-scroll-view/second-scroll-view.component.html
+++ b/src/app/natours/second-scroll-view/second-scroll-view.component.html
@@ -28,9 +28,9 @@
             </div>
             <div class="col-1-of-2 pos-rel">
                 <div class="composition">
-                    <img src="assets/nat-1-large.jpg" class="pos-abs photo photo-1" alt="photo1">
-                    <img src="assets/nat-2-large.jpg" class="pos-abs photo photo-2" alt="photo2">
-                    <img src="assets/nat-3-large.jpg" class="pos-abs photo photo-3" alt="photo3">
+                    <img src="assets/images/nat-1-large.jpg" class="pos-abs photo photo-1" alt="photo1">
+                    <img src="assets/images/nat-2-large.jpg" class="pos-abs photo photo-2" alt="photo2">
+                    <img src="assets/images/nat-3-large.jpg" class="pos-abs photo photo-3" alt="photo3">
                 </div>
             </div>
         </div>
