--- a/src/app/natours/third-scroll-view/third-scroll-view.component.scss
+++ b/src/app/natours/third-scroll-view/third-scroll-view.component.scss
@@ -13,7 +13,7 @@
       rgba(var.$color-green-light, 0.8),
       rgba(var.$color-green-dark, 0.8)
     ),
-    url(/assets/nat-4.jpg);
+    url(/assets/images/nat-4.jpg);
   background-size: cover;
   background-position: top;
   margin-top: -10rem;
