--- a/src/app/natours/first-scroll-view/first-scroll-view.component.html
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="logo-box">
-        <img src="assets/logo-white.png" alt="logo" class="logo">
+        <img src="assets/icons/logo-white.png" alt="logo" class="logo">
     </div>
 
     <div class="text-box">
