--- a/src/app/natours/first-scroll-view/first-scroll-view.component.scss
+++ b/src/app/natours/first-scroll-view/first-scroll-view.component.scss
@@ -8,7 +8,7 @@
       rgba(colors.$color-green-light, 0.8),
       rgba(colors.$color-green-dark, 0.8)
     ),
-    url(/assets/hero.jpg);
+    url(/assets/images/hero.jpg);
   background-size: cover;
   background-position: top;
 
