--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -1,5 +1,6 @@
 <div class="pa-30 overflow-hide">
-    <app-first-scroll-view></app-first-scroll-view>
-    <app-second-scroll-view></app-second-scroll-view>
-    <app-third-scroll-view></app-third-scroll-view>
+    <app-nat-intro></app-nat-intro>
+    <app-nat-about></app-nat-about>
+    <app-nat-feature></app-nat-feature>
+    <app-nat-tours></app-nat-tours>
 </div>
