--- a/src/app/natours/nat-feature/nat-feature.component.html
+++ b/src/app/natours/nat-feature/nat-feature.component.html
@@ -1,47 +1,22 @@
 <section class="section-features">
     <div class="row">
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <em class="feature-box-icon icon-basic-world"></em>
-                <h3 class="heading-tertiary mb-s">Explore the world</h3>
-                <p class="feature-box-text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ab quia illum quam modi! on natus
-                    quod enim!
-                </p>
-            </div>
+            <app-nat-plain-card [cardTitle]="'Explore the world'" [displayIconName]="'icon-basic-world'">
+            </app-nat-plain-card>
         </div>
 
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <em class="feature-box-icon icon-basic-compass"></em>
-                <h3 class="heading-tertiary mb-s">Meet nature</h3>
-                <p class="feature-box-text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ab quia illum quam modi! on natus
-                    quod enim!
-                </p>
-            </div>
+            <app-nat-plain-card [cardTitle]="'Meet nature'" [displayIconName]="'icon-basic-compass'">
+            </app-nat-plain-card>
         </div>
 
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <em class="feature-box-icon icon-basic-map"></em>
-                <h3 class="heading-tertiary mb-s">Find your way</h3>
-                <p class="feature-box-text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ab quia illum quam modi! on natus
-                    quod enim!
-                </p>
-            </div>
+            <app-nat-plain-card [cardTitle]="'Find your way'" [displayIconName]="'icon-basic-map'"></app-nat-plain-card>
         </div>
 
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <em class="feature-box-icon icon-basic-heart"></em>
-                <h3 class="heading-tertiary mb-s">Live a healthier life</h3>
-                <p class="feature-box-text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ab quia illum quam modi! on natus
-                    quod enim!
-                </p>
-            </div>
+            <app-nat-plain-card [cardTitle]="'Live a healthier life'" [displayIconName]="'icon-basic-heart'">
+            </app-nat-plain-card>
         </div>
     </div>
 </section>
