--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,12 @@ $color-green-light: #7ed56f;
 $color-green-medium: #55c57a;
 $color-green-dark: #28b485;
 
+$color-yellow-light: #ffb900;
+$color-yellow-dark: #ff7730;
+
+$color-blue-light: #2998ff;
+$color-blue-dark: #5643fa;
+
 $color-grey-light: #f7f7f7;
 $color-grey-dark: #777;
 $color-white: #fff;
