front face completed

--- a/src/app/natours/nat-tours/nat-tours.component.html
+++ b/src/app/natours/nat-tours/nat-tours.component.html
@@ -6,7 +6,9 @@
     </div>
 
     <div class="row">
-        <div class="col-1-of-3">col1</div>
+        <div class="col-1-of-3">
+            <app-nat-animate-card></app-nat-animate-card>
+        </div>
         <div class="col-1-of-3">col2</div>
         <div class="col-1-of-3">col3</div>
     </div>
