--- a/src/app/natours/nat-animate-card/nat-animate-card.component.html
+++ b/src/app/natours/nat-animate-card/nat-animate-card.component.html
@@ -1,6 +1,22 @@
 <div class="card">
     <div class="card-animate card-animate-front">
-        card
+        <div class="card-pic">
+            &nbsp;
+        </div>
+        <h1 class="card-heading">
+            <span class="card-heading-yellow">
+                the sea explorer
+            </span>
+        </h1>
+        <div class="card-details">
+            <ul>
+                <li>3 day tours</li>
+                <li>Up to 30 people</li>
+                <li>2 tour guides</li>
+                <li>Sleep in cozy hotels</li>
+                <li>Difficulty: easy</li>
+            </ul>
+        </div>
     </div>
     <div class="card-animate card-animate-back card-animate-back-green">
         card
