--- a/src/app/natours/nat-animate-card/nat-animate-card.component.scss
+++ b/src/app/natours/nat-animate-card/nat-animate-card.component.scss
@@ -6,12 +6,12 @@
     height: 50rem;
 
     &-animate {
-        color: #fff;
         font-size: 2rem;
         height: 50rem;
         transition: transform 0.8s ease;
         border-radius: 3px;
         box-shadow: 0 1.5rem 4rem rgba(colors.$color-black, 0.15);
+        overflow: hidden;
 
         &-front,
         &-back {
@@ -43,10 +43,61 @@
     }
 
     &:hover &-animate-front {
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
 
     &:hover &-animate-back {
         transform: rotateY(0);
+    }
+
+    .card-pic {
+        background-image: linear-gradient(to right bottom, colors.$color-yellow-light, colors.$color-yellow-dark),
+            url(/assets/images/nat-5.jpg);
+        background-size: cover;
+        height: 20rem;
+        background-blend-mode: screen;
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    }
+
+    .card-heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: colors.$color-white;
+        position: absolute;
+        top: 10rem;
+        right: 3rem;
+        text-align: right;
+        width: 75%;
+
+        &-yellow {
+            padding: 1rem 1.5rem;
+            box-decoration-break: clone;
+            background-image: linear-gradient(
+                to right bottom,
+                rgba(colors.$color-yellow-light, 0.85),
+                rgba(colors.$color-yellow-dark, 0.85)
+            );
+        }
+    }
+
+    .card-details {
+        padding: 3rem;
+
+        ul {
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+
+                &:not(:last-child) {
+                    border-bottom: 1px solid colors.$color-grey-medium;
+                }
+            }
+        }
     }
 }
