--- a/src/app/natours/nat-tours/nat-tours.component.scss
+++ b/src/app/natours/nat-tours/nat-tours.component.scss
@@ -5,11 +5,7 @@
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(
-    to right,
-    var.$color-green-light,
-    var.$color-green-dark
-  );
+  background-image: linear-gradient(to right, var.$color-green-light, var.$color-green-dark);
   background-clip: text;
   color: transparent;
   letter-spacing: 2px;
@@ -23,4 +19,5 @@
 .section-tours {
   background-color: var.$color-grey-light;
   padding: 25rem 0;
+  margin: -10rem 0;
 }
