--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -10,7 +10,9 @@ $color-blue-light: #2998ff;
 $color-blue-dark: #5643fa;
 
 $color-grey-light: #f7f7f7;
+$color-grey-medium: #eee;
 $color-grey-dark: #777;
+
 $color-white: #fff;
 $color-black: #000;
 
