--- a/src/app/natours/components/nat-animate-card/nat-animate-card.component.html
+++ b/src/app/natours/components/nat-animate-card/nat-animate-card.component.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
     </div>
-    <div class="card-animate card-animate-back card-animate-back-green">
+    <div class="card-animate card-animate-back card-animate-back-yellow">
         card
     </div>
 </div>
