--- a/src/app/natours/components/nat-tours/nat-tours.component.html
+++ b/src/app/natours/components/nat-tours/nat-tours.component.html
@@ -7,9 +7,13 @@
 
     <div class="row">
         <div class="col-1-of-3">
-            <app-nat-animate-card></app-nat-animate-card>
+            <app-nat-tour-card></app-nat-tour-card>
         </div>
-        <div class="col-1-of-3">col2</div>
-        <div class="col-1-of-3">col3</div>
+        <div class="col-1-of-3">
+            <app-nat-tour-card></app-nat-tour-card>
+        </div>
+        <div class="col-1-of-3">
+            <app-nat-tour-card></app-nat-tour-card>
+        </div>
     </div>
 </section>
