completed tour cards

--- a/src/app/natours/components/nat-animate-card/nat-animate-card.component.html
+++ b/src/app/natours/components/nat-animate-card/nat-animate-card.component.html
@@ -2,7 +2,7 @@
     <div class="card-animate card-animate-front">
         <ng-content select=[front-side]></ng-content>
     </div>
-    <div class="card-animate card-animate-back card-animate-back-yellow">
+    <div class="card-animate card-animate-back" [ngClass]="[colorClass]">
         <ng-content select=[back-side]></ng-content>
     </div>
 </div>
