--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -14,6 +14,18 @@
   margin-bottom: 8rem;
 }
 
+.mt-s {
+  margin-top: 1.5rem;
+}
+
+.mt-m {
+  margin-top: 4rem;
+}
+
+.mt-l {
+  margin-top: 8rem;
+}
+
 .pos-rel {
   position: relative;
 }
