tour section complete

--- a/src/app/natours/components/nat-tours/nat-tour-card/nat-tour-card.component.html
+++ b/src/app/natours/components/nat-tours/nat-tour-card/nat-tour-card.component.html
@@ -1,10 +1,10 @@
 <app-nat-animate-card [colorClass]="cardItem?.colorBack || ''">
     <ng-container front-side>
-        <div class="card-pic" [ngClass]="cardItem?.colorFront">
+        <div class="card-pic" [ngClass]="cardItem?.colorFront || ''">
             &nbsp;
         </div>
         <h1 class="card-heading">
-            <span class="card-heading" [ngClass]="cardItem?.colorHead">
+            <span class="card-heading" [ngClass]="cardItem?.colorHead || ''">
                 {{cardItem?.title}}
             </span>
         </h1>
