--- a/src/app/natours/components/nat-tours/nat-tours.component.html
+++ b/src/app/natours/components/nat-tours/nat-tours.component.html
@@ -10,4 +10,8 @@
             <app-nat-tour-card [cardItem]="cardItem"></app-nat-tour-card>
         </div>
     </div>
+
+    <div class="center-text mt-l">
+        <a href="#" class="btn btn-green">Discover all tours</a>
+    </div>
 </section>
